Added Brainstorm button and page in sidebar

--- a/views/about.css.html
+++ b/views/about.css.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <base target="_top">
-  </head>
-  <body>
-    
-  </body>
-</html>
+<div>
+This is a test, it worked!
+</div>
 
-
+<style>
+body {
+  background-color: green;
+}
+</style>
