--- a/views/about.html
+++ b/views/about.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <base target="_top">
-  </head>
-  <body>
-    
-  </body>
-</html>
+<?!= include('views/about.css'); ?>
 
+Hello, world!
 
+<input type="button" value="Close"
+  onclick="google.script.host.close()" />
+  
