--- a/views/sidebar.css.html
+++ b/views/sidebar.css.html
@@ -1,11 +1,22 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <base target="_top">
-  </head>
-  <body>
-    
-  </body>
-</html>
+<style>
 
+header {background: darkgrey; font-size: 24px; }
+#purpose { margin: 10px}
+.purpose-item {width: auto; margin: 10px; display: inline-block; vertical-align: top; text-align: center;}
+.purpose-label {font-size: 9px; padding: 0px; margin: 0px;}
+.label {font-size: 8px }
+h2 { margin: 30px; }
+button {white-space: normal; height: auto;}
+.idea { padding: 10px; border-style: solid; border-width: 1px; margin-bottom: 20px; }
+.suggestion { padding: 10px; border-style: solid; border-width: 1px; margin-bottom: 20px; }
+footer { width: 100%; height: 100px}
+.navitem { display: inline-block; width:28%; height: 80%; text-align: center; vertical-align:middle; border-style: solid; border-width: 1px;}
+#fixes {display: none}
+#home {display: none}
+#brainstorm {display: none}
+.page {border-top-style: solid; border-width: 2px; height: 600px; }
+.font { width: 25% }
+#fontbox { display: block; margin:10px;}
+.quote { margin: 10px; width: 85%; }
 
+</style>
