--- a/views/sidebar.css.html
+++ b/views/sidebar.css.html
@@ -18,5 +18,6 @@ footer { width: 100%; height: 100px}
 .font { width: 25% }
 #fontbox { display: block; margin:10px;}
 .quote { margin: 10px; width: 85%; }
+#homenav {width:33%; height: 88%;}
 
 </style>
