--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://ssl.gstatic.com/docs/script/css/add-ons1.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <?!= include('views/sidebar.css'); ?>
     <?!= include('jquery/sidebar.js'); ?>
   </head>
@@ -76,6 +77,6 @@
       
     </footer>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
   </body>
 </html>
