Materialize css for the about product dialog

--- a/views/about.html
+++ b/views/about.html
@@ -1,7 +1,14 @@
 <?!= include('views/about.css'); ?>
+<!-- Compiled and minified Materialize CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+
+<div class="card-panel teal lighten-2">This is a card panel with a teal lighten-2 class</div>
 
 Hello, world!
 
-<input type="button" value="Close"
+<input class="btn" type="button" value="Close"
   onclick="google.script.host.close()" />
   
