Completed About dialog with Instructions of Use

--- a/views/about.css.html
+++ b/views/about.css.html
@@ -1,9 +1,16 @@
-<div>
-This is a test, it worked!
-</div>
-
 <style>
-body {
-  color: black;
-}
+    /* I use Materialize to style the dialog.
+    I'll use this section only if I want to override something or
+    provide functionality that is not in Materialize. */
+
+    .main {
+        float: left;
+        width: 70%;
+    }
+
+    .side {
+        float: right;
+        width: 20%;
+    }
+
 </style>
