--- a/views/about.html
+++ b/views/about.html
@@ -5,10 +5,33 @@
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
 
-<div class="card-panel teal lighten-2">This is a card panel with a teal lighten-2 class</div>
+<div class="main">
+    <div class="center-align blue accent-2">
+        <h5 class="white-text"> How to Use </h5>
+    </div>
+        <ul>
+            <li>1. After installation, click Add-ons -> Captivate AI -> Start Here </li>
+            <li>2. By this, a dialog window will open and ask you some questions about the presentation you are about to give.</li>
+            <li>3. After this dialog, a second dialog will appear, asking you to brainstorm intial thoughts about the theme of your presentation.</li>
+            <li>3a. You have the option of skipping this brainstorming session if you don't want to fill it out. Our tool uses this brainstorm to generate
+            new content for you. </li>
+            <li>4. After you either skip or fill it in, the sidebar will appear. It has 3 sections: Ideas, Home, and Quick Fixes.</li>
+            <li>4a. Ideas has suggestions for new content, such as typeface changes, new images, and new  quotes.</li>
+            <li>4b. Fixes are quick fixes such as fixing alignment of objects or suggesting less text on a slide.</li>
+            <li>4c. Home is a complete list of both Ideas and Fixes and the amount of progress done in each.</li>
+        </ul>
 
-Hello, world!
+    <div class="center-align blue accent-2">
+        <h5 class="white-text"> About the Company </h5>
+    </div>
+        <span> For more information, check us out at <a href="https://captivate-ai.herokuapp.com">https://captivate-ai.herokuapp.com</a></span>
+    <div class="blue center-align accent-2">
+        <h5 class="white-text"> Report an Issue </h5>
+    </div>
+        <span> To report a bug or an issue, send us an e-mail at support@captivate-ai.com</span>
+</div>
 
-<input class="btn" type="button" value="Close"
-  onclick="google.script.host.close()" />
-  
+<div class="side">
+    <button class="waves-light waves-effect btn-small blue accent-2"
+            onclick="google.script.host.close()" >Close</button>
+</div>
