--- a/views/survey_start.html
+++ b/views/survey_start.html
@@ -1,4 +1,7 @@
 <?!= include('views/about.css'); ?>
+<!-- Materialize icons -->
+<link rel = "stylesheet"
+      href = "https://fonts.googleapis.com/icon?family=Material+Icons">
 <!-- Compiled and minified Materialize CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
 
@@ -18,6 +21,6 @@
 </div>
 
 <div class="side">
-    <button class="waves-light waves-effect btn-small blue accent-2"
-            onclick="google.script.host.close()" >Close</button>
+    <a class="waves-light waves-effect btn-small blue accent-2"
+            onclick="google.script.host.close()" ><i class="material-icons right">cancel</i>Close</a>
 </div>
