--- a/views/sidebar.css.html
+++ b/views/sidebar.css.html
@@ -10,7 +10,8 @@ button {white-space: normal; height: auto;}
 .idea { padding: 10px; border-style: solid; border-width: 1px; margin-bottom: 20px; }
 .suggestion { padding: 10px; border-style: solid; border-width: 1px; margin-bottom: 20px; }
 footer { width: 100%; height: 100px}
-.navitem { display: inline-block; width:28%; height: 80%; text-align: center; vertical-align:middle; border-style: solid; border-width: 1px;}
+/* I use materialize to format the navitem buttons */
+/*.navitem { display: inline-block; width:28%; height: 80%; text-align: center; vertical-align:middle; border-style: solid; border-width: 1px;}*/
 #fixes {display: none}
 #home {display: none}
 #brainstorm {display: none}
@@ -18,6 +19,8 @@ footer { width: 100%; height: 100px}
 .font { width: 25% }
 #fontbox { display: block; margin:10px;}
 .quote { margin: 10px; width: 85%; }
-#homenav {width:33%; height: 88%;}
+
+/* We now use Materialize to make the home button bigger */
+/*#homenav {width:33%; height: 88%;}*/
 
 </style>
