--- a/views/sidebar.css.html
+++ b/views/sidebar.css.html
@@ -10,8 +10,10 @@ button {white-space: normal; height: auto;}
 .idea { padding: 10px; border-style: solid; border-width: 1px; margin-bottom: 20px; }
 .suggestion { padding: 10px; border-style: solid; border-width: 1px; margin-bottom: 20px; }
 footer { width: 100%; height: 100px}
+
 /* I use materialize to format the navitem buttons */
 /*.navitem { display: inline-block; width:28%; height: 80%; text-align: center; vertical-align:middle; border-style: solid; border-width: 1px;}*/
+
 #fixes {display: none}
 #home {display: none}
 #brainstorm {display: none}
@@ -19,7 +21,19 @@ footer { width: 100%; height: 100px}
 .font { width: 25% }
 #fontbox { display: block; margin:10px;}
 .quote { margin: 10px; width: 85%; }
-
+.container {
+    margin: 0 auto;
+    max-width: 1280px;
+    width: 90%;
+}
+@media only screen and (min-width: 601px)
+    .container {
+        width: 85%;
+    }
+    @media only screen and (min-width: 993px)
+        .container {
+            width: 70%;
+        }
 /* We now use Materialize to make the home button bigger */
 /*#homenav {width:33%; height: 88%;}*/
 
