brainstorm styling mostly complete, initial text area done

--- a/views/sidebar.css.html
+++ b/views/sidebar.css.html
@@ -26,14 +26,17 @@ footer { width: 100%; height: 100px}
     max-width: 1280px;
     width: 90%;
 }
-@media only screen and (min-width: 601px)
-    .container {
-        width: 85%;
-    }
-    @media only screen and (min-width: 993px)
-        .container {
-            width: 70%;
-        }
+/*#textarea1{*/
+    /*height: 200px;*/
+/*}*/
+/*.materialize-textarea {*/
+    /*height: 300px;*/
+/*}*/
+
+textarea.materialize-textarea{
+    height: 0px;
+}
+
 /* We now use Materialize to make the home button bigger */
 /*#homenav {width:33%; height: 88%;}*/
 
