--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -13,7 +13,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
   </head>
-  <body class="teal accent-1">
+  <body class="white">
   
     <div class="center-align" id='purpose'>
       <div class='purpose-item'>
