--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -82,8 +82,7 @@
             <div class="row">
               <div class="input-field col s11">
                 <i class="material-icons prefix">create</i>
-                <textarea id="textarea1" class="materialize-textarea">For example,
-                  We must learn to protect the Earth's environment. Here are some easy ways to remember to recycle and compost your goods.
+                <textarea id="textarea1" class="materialize-textarea">We must learn to protect the Earth's environment. Here are some easy ways to remember to recycle and compost your goods.
                 </textarea>
                 <label for="textarea1"> Write/List things to talk about...</label>
               </div>
