--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -84,7 +84,7 @@
                 <i class="material-icons prefix">create</i>
                 <textarea id="textarea1" class="materialize-textarea">We must learn to protect the Earth's environment. Here are some easy ways to remember to recycle and compost your goods.
                 </textarea>
-                <label for="textarea1"> Write/List things to talk about...</label>
+                <label for="textarea1"> Write or List things to talk about...</label>
               </div>
             </div>
 
