--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -13,6 +13,53 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
   </head>
+  <script>
+      // Prevent forms from submitting.
+      function preventFormSubmit() {
+          var forms = document.querySelectorAll('form');
+          for (var i = 0; i < forms.length; i++) {
+              forms[i].addEventListener('submit', function(event) {
+                  event.preventDefault();
+              });
+          }
+      }
+      window.addEventListener('load', preventFormSubmit);
+      function handleFormSubmit(formObject) {
+          google.script.run.withSuccessHandler(updateUrl).processForm(formObject);
+      }
+
+      // function updateUrl(url) {
+      //     var div = document.getElementById('output');
+      //     div.innerHTML = '<a href="' + url + '">Got it!</a>';
+      // }
+      // function submitBrainstorm(formObject) {
+      //     google.script.run.withSuccessHandler(updateDiv).processBrainstormUsingForm(formObject);
+      // }
+
+      function submitBrainstormToImages2(formObject) {
+          google.script.run
+          // on success of first
+              .withSuccessHandler(updateDivWithImages).processBrainstormUsingForm(formObject);
+      }
+
+      //update div based on results from images and NLP APIs
+      function updateDivWithImages(imgs) {
+          //Logger.log(imgs); no longer in this part of the script
+          console.log(imgs);
+          console.log("After imgs API returns and after I parse the Json, I am updating the div");
+          for (var i = 0; i < imgs.length; i++) {
+              // call images api and append a corresponding div
+              // need jquery knowledge to resize these images
+              if (imgs[i].length > 0){
+                  // checks to see if src link is not the empty string
+                  // I made the url be an empty string if the search for a keyword is not found in
+                  // the websites.
+                  $('#output').append('<img onclick="insertImage(this)" src="' + imgs[i] + '" width="78px" height="78px"/>');
+              }
+          }
+      }
+  </script>
+
   <body class="white">
   
     <div class="center-align" id='purpose'>
@@ -69,7 +116,7 @@
       <h4 class="center-align"> Brainstorm </h4>
           <!-- brainstorm session in the sidebar -->
         <div class="col s12">
-          <form id='brainstorm_form' method="post" onsubmit="submitBrainstorm(this)">
+          <form id='brainstorm_form' method="post" onsubmit="submitBrainstormToImages2(this)">
 
             <!--Name: <input type="text" name="name" /><br/>-->
             <div class="row">
@@ -97,6 +144,16 @@
 
             <!--<input type="submit" value="Submit" />-->
           </form>
+          <!-- brainstorm session in the sidebar -->
+          <form id='brainstorm_form2' method="post" onsubmit="submitBrainstormToImages2(this)">
+            Name: <input label="name" type="text" name="name" /><br/>
+            Brainstorm:<br/>
+            <textarea label="brainstorm" name="brainstorm"></textarea><br/>
+            <input type="submit" value="Submit" />
+          </form>
+
+          <br><br>
+          <div id="output"></div>
         </div>
     </div>      
   
