kept the one that works only

--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -119,37 +119,38 @@
           <form id='brainstorm_form' method="post" onsubmit="submitBrainstormToImages2(this)">
 
             <!--Name: <input type="text" name="name" /><br/>-->
-            <div class="row">
-              <div class="input-field col s11">
-                <i class="material-icons prefix">person</i>
-                <input id="user_name" type="text" class="validate">
-                <label for="user_name">First Name</label>
-              </div>
-            </div>
-            <div class="row">
-              <div class="input-field col s11">
-                <i class="material-icons prefix">create</i>
-                <textarea id="textarea1" class="materialize-textarea">We must learn to protect the Earth's environment. Here are some easy ways to remember to recycle and compost your goods.
-                </textarea>
-                <label for="textarea1"> Write or List things to talk about...</label>
-              </div>
-            </div>
+            <!--<div class="row">-->
+              <!--<div class="input-field col s11">-->
+                <!--<i class="material-icons prefix">person</i>-->
+                <!--<input id="user_name" type="text" class="validate">-->
+                <!--<label for="user_name">First Name</label>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div id="r" class="row">-->
+              <!--<div id="inpt" class="input-field col s11">-->
+                <!--<i class="material-icons prefix">create</i>-->
+                <!--<textarea name="brainstorm" label="brainstorm" id="textarea1" class="materialize-textarea">We must learn to protect the Earth's environment. Here are some easy ways to remember to recycle and compost your goods.-->
+                <!--</textarea>-->
+                <!--&lt;!&ndash;<label for="textarea1"> Write or List things to talk about...</label>&ndash;&gt;-->
+              <!--</div>-->
+            <!--</div>-->
 
             <!--<textarea name="bstorm"></textarea><br/>-->
-            <div class="row">
-              <div class="center-align">
-                <a class="btn blue accent-2 waves-light waves-effect">Submit</a>
-              </div>
-            </div>
+            <!--<div class="row">-->
+              <!--<div class="center-align">-->
+                <!--<a class="btn blue accent-2 waves-light waves-effect">Submit</a>-->
+              <!--</div>-->
+            <!--</div>-->
 
             <!--<input type="submit" value="Submit" />-->
           </form>
+
           <!-- brainstorm session in the sidebar -->
           <form id='brainstorm_form2' method="post" onsubmit="submitBrainstormToImages2(this)">
-            Name: <input label="name" type="text" name="name" /><br/>
+            <!--Name: <input label="name" type="text" name="name" /><br/>-->
             Brainstorm:<br/>
             <textarea label="brainstorm" name="brainstorm"></textarea><br/>
-            <input type="submit" value="Submit" />
+            <input class="btn blue accent-2 waves-light waves-effect" type="submit" value="Submit" />
           </form>
 
           <br><br>
