styling and submit works, SlidesApp not defined error

--- a/views/sidebar.css.html
+++ b/views/sidebar.css.html
@@ -37,6 +37,11 @@ textarea.materialize-textarea{
     height: 0px;
 }
 
+/* removes white outline when the input button is clicked */
+input:focus {
+    outline:none;
+}
+
 /* We now use Materialize to make the home button bigger */
 /*#homenav {width:33%; height: 88%;}*/
 
