Added a blurb to begin the brainstorm with

--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -162,10 +162,11 @@
             <div id="r" class="row">
               <div id="inpt" class="input-field col s11">
               <i class="material-icons prefix">create</i>
-              <textarea class="materialize-textarea" label="brainstorm" name="brainstorm"></textarea><br/>
+              <textarea class="materialize-textarea" label="brainstorm" name="brainstorm">I prepared healthy snacks for my flight to Los Angeles. I ate apples and bananas with peanut butter.
+                </textarea><br/>
               </div>
             </div>
-            <input class="btn blue accent-2 waves-light waves-effect white-text" type="submit" value="Submit" />
+            <div class="center-align white-text"><input class="btn green accent-2 waves-light waves-effect white-text" type="submit" value="Submit" /></div>
             <!--<a class="btn blue accent-2 waves-light waves-effect" type="submit">Submit</a>-->
           </form>
 
