--- a/views/survey_start.css.html
+++ b/views/survey_start.css.html
@@ -13,4 +13,14 @@
         width: 20%;
     }
 
+    [type="radio"]:checked {
+        background-color: blue !important;
+    }
+
+    /*[type="radio"]:checked + label::after, [type="radio"].with-gap:checked + label::after {*/
+        /*background-color: rgb(255, 138, 6) !important;*/
+    /*}*/
+    /*[type="radio"]:checked + label::after, [type="radio"].with-gap:checked + label::before, [type="radio"].with-gap:checked + label::after {*/
+        /*border: 2px solid rgb(255, 138, 6) !important;*/
+    /*}*/
 </style>
