centered the brainstorm images

--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -141,7 +141,7 @@
           </form>
 
           <br><br>
-          <div id="output"></div>
+          <div class="center-align" id="output"></div>
         </div>
     </div>      
 
