--- a/views/sidebar.css.html
+++ b/views/sidebar.css.html
@@ -14,9 +14,9 @@ footer { width: 100%; height: 100px}
 /* I use materialize to format the navitem buttons */
 /*.navitem { display: inline-block; width:28%; height: 80%; text-align: center; vertical-align:middle; border-style: solid; border-width: 1px;}*/
 
-#fixes {display: none}
-#home {display: none}
-#brainstorm {display: none}
+/*#fixes {display: none}*/
+/*#home {display: none}*/
+/*#brainstorm {display: none}*/
 .page {border-top-style: solid; border-width: 2px; height: 600px; }
 .font { width: 25% }
 #fontbox { display: block; margin:10px;}
