Fixed navbar scrolls behind

--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -119,6 +119,7 @@
       <div id='fixbox'>
         
       </div>
+      <br><br><br>
     </div>
   
     <div class='page' id='brainstorm'>
@@ -143,20 +144,23 @@
           <br><br>
           <div class="center-align" id="output"></div>
         </div>
-    </div>      
+    </div>
 
-    <div>
+    <div id="nav">
       <footer>
+        <!--<div class='center-align' style="position:absolute; float: none; bottom: 0px; z-index: 99999;">-->
         <div class='center-align'>
-          <button class='blue accent-2 navitem btn' id='brainstorm_nav'> Brainstorm </button>
+          <button class='green accent-2 navitem btn' id='brainstorm_nav'> Brainstorm </button>
         </div>
         <br>
-        <div class="center-align">
+        <nav class="white">
+          <div class="center-align">
 
-            <button class='blue accent-2 waves-light navitem btn' id='ideanav'> Ideas </button>
-            <button class='blue accent-2 waves-light navitem btn-large' id='homenav'> Home </button>
-            <button class='blue accent-2 waves-light navitem btn' id='fixnav'> Fixes </button>
-        </div>
+              <button class='col s3 blue accent-2 waves-light navitem btn' id='ideanav'> Ideas </button>
+              <button class='col s3 blue accent-2 waves-light navitem btn-large' id='homenav'> Home </button>
+              <button class='col s3 blue accent-2 waves-light navitem btn' id='fixnav'> Fixes </button>
+          </div>
+        </nav>
       </footer>
     </div>
 
