Finished bottom fixed navbar

--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -150,15 +150,40 @@
       <footer>
         <!--<div class='center-align' style="position:absolute; float: none; bottom: 0px; z-index: 99999;">-->
         <div class='center-align'>
-          <button class='green accent-2 navitem btn' id='brainstorm_nav'> Brainstorm </button>
+          <!--<a class='green accent-2 navitem btn black-text' id='brainstorm_nav'> Brainstorm </a>-->
         </div>
-        <br>
+        <!--<div class="row center-align">-->
+        <!--<div class="col s3">-->
+          <!--hi-->
+        <!--</div>-->
+        <!--<div class="col s3">-->
+          <!--hi-->
+        <!--</div>-->
+        <!--<div class="col s3">-->
+          <!--hi-->
+        <!--</div>-->
+        <!--<div class="col s3">-->
+          <!--hi-->
+        <!--</div>-->
+        <!--</div>-->
+        <br><br><br>
         <nav class="white">
-          <div class="center-align">
-
-              <button class='col s3 blue accent-2 waves-light navitem btn' id='ideanav'> Ideas </button>
-              <button class='col s3 blue accent-2 waves-light navitem btn-large' id='homenav'> Home </button>
-              <button class='col s3 blue accent-2 waves-light navitem btn' id='fixnav'> Fixes </button>
+          <div class="row center-align">
+              <div class="col s3 blue accent-2">
+                <a class='waves-light navitem' id='ideanav'> Ideas </a>
+              </div>
+              <div class="col s3 green accent-2">
+                <a class='waves-light navitem black-text' id='homenav'> Checklist </a>
+              </div>
+              <div class="col s3 blue accent-2">
+                <a class='waves-light navitem' id='fixnav'> Fixes </a>
+              </div>
+              <div class="col s3 green accent-2">
+                <a class='center-align navitem black-text' id='brainstorm_nav'> Images </a>
+              </div>
+              <!--<button class='col s3 blue accent-2 waves-light navitem btn' id='ideanav'> Ideas </button>-->
+              <!--<button class='col s3 blue accent-2 waves-light navitem btn-large' id='homenav'> Home </button>-->
+              <!--<button class='col s3 blue accent-2 waves-light navitem btn' id='fixnav'> Fixes </button>-->
           </div>
         </nav>
       </footer>
