Styled page titles

--- a/views/sidebar.css.html
+++ b/views/sidebar.css.html
@@ -5,6 +5,9 @@ header {background: darkgrey; font-size: 24px; }
 .purpose-item {width: auto; margin: 10px; display: inline-block; vertical-align: top; text-align: center;}
 .purpose-label {font-size: 9px; padding: 0px; margin: 0px;}
 .label {font-size: 8px }
+.icon {
+
+}
 h2 { margin: 30px; }
 button {white-space: normal; height: auto;}
 .idea { padding: 10px; border-style: solid; border-width: 1px; margin-bottom: 20px; }
@@ -42,6 +45,19 @@ input:focus {
     outline:none;
 }
 
+.Title {
+    width: 137px;
+    height: 27px;
+    font-family: Arial;
+    font-size: 24px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #e59a1d;
+}
 /* We now use Materialize to make the home button bigger */
 /*#homenav {width:33%; height: 88%;}*/
 
