--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -87,14 +87,18 @@
     </div>
     
     <div class='page' id='ideas'>
-      <h4 class="center-align"> Magic Ideas </h4>
+      <div class="container">
+        <h4 class="Title"> Magic Ideas </h4>
+      </div>
       <div id='ideabox'>
         
       </div>
     </div>
 
     <div class='page' id='home' >
-      <h4 class="center-align"> Home </h4>
+      <div class="container">
+        <h4 class="Title"> Checklist </h4>
+      </div>
         <div class='suggestion'>
           <div class='label'>SUGGESTION</div>
           There is too much text on this slide. Consider selecting a picture you would like to replace it with
@@ -113,9 +117,11 @@
           <button class='quote'>"Two things are infinite: the universe and human stupidity; and I'm not sure about the universe." -Albert Einstein</button>
         </div>
     </div>
-    
+
     <div class='page' id='fixes'>
-      <h4 class="center-align"> Quick Fixes </h4>
+      <div class="container">
+        <h4 class="Title center-align"> Quick Fixes </h4>
+      </div>
       <div id='fixbox'>
         
       </div>
