Grey borders for suggestions, ideas, and fixes

--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -98,13 +98,13 @@
       <div class='idea'>
           <div class='label'>FONTS</div>
           <div id='fontbox'>
-            <button class='blue accent-2 waves-light font' id='TNR'>Times New Roman</button>
-            <button class='blue accent-2 waves-light waves-effect font' id='athelas'>Athelas</button>
-            <button class='blue accent-2 waves-light waves-effect font' id='georgia'>Georgia</button>
+            <button class='black waves-light font' id='TNR'>Times New Roman</button>
+            <button class='waves-light waves-effect font' id='athelas'>Athelas</button>
+            <button class='waves-light waves-effect font' id='georgia'>Georgia</button>
           </div>
         </div>
       <div class='idea'>
-          <div class='label'>Quotes</div>
+          <div class='label'>QUOTES</div>
           <button class='quote'>"Don't cry because it's over, smile because it happened." -Dr. Seuss</button>
           <button class='quote'>"Two things are infinite: the universe and human stupidity; and I'm not sure about the universe." -Albert Einstein</button>
         </div>
