--- a/views/sidebar.css.html
+++ b/views/sidebar.css.html
@@ -4,7 +4,7 @@ header {background: darkgrey; font-size: 24px; }
 #purpose { margin: 10px}
 .purpose-item {width: auto; margin: 10px; display: inline-block; vertical-align: top; text-align: center;}
 .purpose-label {font-size: 9px; padding: 0px; margin: 0px;}
-.label {font-size: 8px }
+.label {font-size: 9px }
 
 #goal_time {
     font-family: Helvetica;
@@ -31,8 +31,13 @@ header {background: darkgrey; font-size: 24px; }
 }
 h2 { margin: 30px; }
 button {white-space: normal; height: auto;}
-.idea { padding: 10px; border-style: solid; border-width: 1px; margin-bottom: 20px; }
-.suggestion { padding: 10px; border-style: solid; border-width: 1px; margin-bottom: 20px; }
+.idea {
+    padding: 10px; border-style: solid; border-width: 2px; margin-bottom: 20px;
+    border-color: lightgrey;
+}
+.suggestion { padding: 10px; border-style: solid; border-width: 2px; margin-bottom: 20px;
+    border-color: lightgrey;
+}
 footer { width: 100%; height: 100px}
 
 .page {border-top-style: solid; border-width: 2px; height: 600px; }
